# builderbrain

./: BUILDERBRAIN_FINAL_REPORT.md  Gemfile  README.md  README_DASHBOARD.md  README_HUGGINGFACE.md  README_JEKYLL.md  _config.yml  benchmark.py  builderbrain_benchmarks.json  debug_rank.py  debug_rank2.py  demo_dashboard.py  demo_huggingface.py  index.html  main.py  pyproject.toml  training_history_tiny.json
.cursor/rules/: system-prompt.mdc
.github/workflows/: jekyll.yml  sync-to-huggingface.yml
_sass/: custom.scss
_site/: feed.xml  index.html
bb_core/: __init__.py  math_utils.py  normalizers.py  protocols.py
bb_losses/: __init__.py  constraint_losses.py  dual_optimizer.py  loss_functions.py
bb_nn/: __init__.py  composition_blocks.py  dual_rail.py  fusion_gates.py  program_adapters.py
bb_priors/: __init__.py  cfg_parser.py  grammar_energy.py  peg_parser.py  token_masks.py
bb_runtime/: __init__.py  plan_checker.py  plan_executor.py  plan_schemas.py  runtime_decoder.py  safety_monitor.py  world_model.py
bb_train/: __init__.py  config.py  data_loader.py  trainer.py
builderbrain_dashboard/: Dockerfile
builderbrain_dashboard/dashboard/: app.py
configs/: production.yaml  small.yaml  tiny.yaml
docs/: BENCHMARKS.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  DESIGN.md  DUAL_OPTIMIZER.md  GRAMMAR_GUIDE.md  LOSS_BANK.md  MATH_SPEC.md  OBSERVABILITY.md  PLAN_SCHEMA_GUIDE.md  PROGRAM_SKILLS.md  RELEASE.md  RUNTIME_PLAYBOOK.md  SAFETY_SPEC.md  WORLD_MODEL.md
exports/builderbrain_small_1759327754/: README.md
exports/builderbrain_tiny_1759342258/: README.md
exports/builderbrain_tiny_1759342426/: README.md
exports/builderbrain_tiny_1759360310/: README.md
exports/builderbrain_tiny_1759360313/: README.md
exports/builderbrain_tiny_1759367360/: README.md
huggingface_pipeline/deployment/: Dockerfile  docker-compose.yml
huggingface_pipeline/inference_api/: app.py
huggingface_pipeline/model_export/: export.py  (+1 more)
(+32 files in other folders)
